add responsive mobile in services

--- a/src/components/pages/services/cici-language-course-expert/Benefits.astro
+++ b/src/components/pages/services/cici-language-course-expert/Benefits.astro
@@ -8,19 +8,23 @@ const benefits = [
   {
     image: item1,
     title: "Flexible Programs",
-    description: "Choose online, offline classes or company training, tailored to your or your schedule.",
+    description:
+      "Choose one-on-one, group, or company training, all tailored to your goals and schedule.",
   },
   {
     image: item2,
     title: "Experienced Instructors",
-    description: "Learn from native speakers with real-life teaching in China for authentic, effective learning.",
+    description:
+      "Experienced teachers with real-life teaching in China for authentic, effective learning.",
   },
   {
     image: item3,
     title: "Multilingual Support",
-    description: "Classes in Mandarin, Bahasa Indonesian, English, and Chinese for smooth learning.",
+    description:
+      "Classes available in Indonesian, English, and Chinese for smooth learning.",
   },
 ];
+
 ---
 
 <section 
