--- a/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
+++ b/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
@@ -1,12 +1,16 @@
 ---
 const background = "/pages/services/cici-tour-travel-expert/explorer/background.webp";
+const bgMobile = "/pages/services/cici-tour-travel-expert/explorer/bg-mobile.webp";
 ---
 
 <section class="relative w-full overflow-hidden -mt-6 -z-4">
-  <img src={background} alt="Roadmap background" class="w-full h-auto block" />
+  <picture>
+    <source media="(min-width: 640px)" srcset={background} />
+    <img src={bgMobile} alt="Roadmap background" class="w-full h-auto block" />
+  </picture>
 
-  <div class="absolute inset-0 px-2 md:px-4 lg:px-8 py-8 md:py-12 flex items-center justify-center -ml-164">
-    <div class="flex flex-col items-center">
+  <div class="absolute inset-0 px-2 md:px-4 lg:px-8 py-8 md:py-12 flex items-center justify-center md:items-center md:justify-center ml-0 md:-ml-164 -mt-128 md:mt-0">
+    <div class="flex flex-col items-center mt-8 md:mt-0">
       <h1 class="text-2xl md:text-3xl lg:text-6xl font-bold text-white tracking-wide font-mochiy-pop-one text-outline-cyan mb-4 text-center">
         <span>EXPLORERS</span><br /><span class="mt-2 md:mt-4 block">JOURNEY</span>
       </h1>
