--- a/src/components/pages/services/cici-career-link-expert/Hero.astro
+++ b/src/components/pages/services/cici-career-link-expert/Hero.astro
@@ -24,7 +24,7 @@ const bgMobile = "/pages/services/cici-career-link-expert/hero/bg-mobile.webp";
           <div class="text-center bg-white/0">
             <h2 class="text-[#934935] font-bold text-[9px] max-[360px]:text-[10px] sm:text-base md:text-lg">Build Your Future with Us:</h2>
             <h3 class="text-[#934935] font-bold text-[9px] max-[360px]:text-[10px] sm:text-base md:text-lg -mt-1">Your Gateway to Career Opportunities in China!</h3>
-            <p class="mt-3 text-[9px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#934935] leading-relaxed">
+            <p class="text-[9px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#934935] leading-relaxed">
               At Cici Mandarin, we help you land the right job in China—internships, part-time, or full-time—across various industries. Get detailed listings with job info, company profiles, and city insights. Your dream career starts here!
             </p>
           </div>
