--- a/src/components/pages/services/cici-language-course-expert/Hero.astro
+++ b/src/components/pages/services/cici-language-course-expert/Hero.astro
@@ -24,7 +24,7 @@ const bgMobile = "/pages/services/cici-language-course-expert/hero/bg-mobile.web
           <div class="text-center bg-white/0">
             <h2 class="text-[#cb0d0d] font-bold text-[11px] max-[360px]:text-[10px] sm:text-base md:text-lg">Master Mandarin with Us:</h2>
             <h3 class="text-[#cb0d0d] font-bold text-[11px] max-[360px]:text-[10px] sm:text-base md:text-lg -mt-1">Your All-in-One Chinese Language Solution</h3>
-            <p class="mt-3 text-[10px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#cb0d0d] leading-relaxed">
+            <p class="text-[10px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#cb0d0d] leading-relaxed">
               At Cici Mandarin, we offer Chinese courses for all ages and levels, guided by local and native teachers to help you learn Mandarin in a way that suits your life and goals.
             </p>
           </div>
