--- a/src/components/pages/services/cici-study-abroad-expert/Hero.astro
+++ b/src/components/pages/services/cici-study-abroad-expert/Hero.astro
@@ -24,7 +24,7 @@ const bgMobile = "/pages/services/cici-study-abroad-expert/hero/bg-mobile.webp";
           <div class="text-center bg-white/0">
             <h2 class="text-[#3D4F8E] font-bold text-[10px] max-[360px]:text-[9px] sm:text-base md:text-lg">Achieve Your Dream Campus with Us:</h2>
             <h3 class="text-[#3D4F8E] font-bold text-[10px] max-[360px]:text-[9px] sm:text-base md:text-lg -mt-1">Your All-in-One University Enrollment Partner!</h3>
-            <p class="mt-3 text-[8px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#3D4F8E] leading-relaxed">
+            <p class="text-[8px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#3D4F8E] leading-relaxed">
               At Cici Mandarin, we don’t just teach the language — we help you take it further. Our team of experts is here to guide you through every step of studying in China, from language preparation and university applications to
               scholarships, visas, and settling in.
             </p>
