--- a/src/components/pages/services/cici-language-course-expert/Goals.astro
+++ b/src/components/pages/services/cici-language-course-expert/Goals.astro
@@ -8,8 +8,8 @@ const bgMobile = "/pages/services/cici-language-course-expert/goals/bg-mobile.we
     <source media="(min-width: 640px)" srcset={background} />
     <img src={bgMobile} alt="Goals background" class="w-full h-full object-cover object-center md:object-right" />
   </picture>
-  <div class="container mx-auto max-w-7xl pt-20 h-full flex flex-col items-center justify-start md:items-start md:justify-start relative z-10">
-    <div class="mt-10 md:ml-68">
+  <div class="container mx-auto max-w-7xl pt-20 md:pt-20 h-full flex flex-col items-center justify-start md:items-start md:justify-start relative">
+    <div class="mt-1 md:ml-68">
       <h2 class="text-6xl font-bold drop-shadow-lg font-mochiy-pop-one text-outline-red">GOALS</h2>
     </div>
   </div>
