--- a/src/components/pages/services/cici-language-course-expert/Who.astro
+++ b/src/components/pages/services/cici-language-course-expert/Who.astro
@@ -25,12 +25,12 @@ const adults = "/pages/services/cici-language-course-expert/who/adults.svg";
           <div class="transform scale-125 origin-bottom">
             <img src={preschool} alt="Preschool" class="h-auto w-full" />
           </div>
-          <img src={people1} alt="Preschool" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-[160px] -mt-4 drop-shadow-lg md:-mt-6" />
+          <img src={people1} alt="Preschool" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-40 -mt-4 drop-shadow-lg md:-mt-6" />
         </div>
 
         <div class="flex flex-1 flex-col items-center self-end">
           <img src={kids} alt="Kid" class="h-auto w-full" />
-          <img src={people2} alt="Kid" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-[160px] -mt-4 drop-shadow-lg md:-mt-6" />
+          <img src={people2} alt="Kid" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-40 -mt-4 drop-shadow-lg md:-mt-6" />
         </div>
 
         <div class="relative flex flex-1 flex-col items-center self-end">
@@ -44,14 +44,14 @@ const adults = "/pages/services/cici-language-course-expert/who/adults.svg";
           <div class="transform scale-90 origin-bottom">
             <img src={adults} alt="Adult" class="h-auto w-full" />
           </div>
-          <img src={people4} alt="Adult" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-[160px] -mt-4 drop-shadow-lg md:-mt-6" />
+          <img src={people4} alt="Adult" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-40 -mt-4 drop-shadow-lg md:-mt-6" />
         </div>
 
         <div class="flex flex-1 flex-col items-center self-end">
           <div class="transform scale-110 origin-bottom">
             <img src={companies} alt="Company" class="h-auto w-full" />
           </div>
-          <img src={people5} alt="Company" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-[160px] -mt-4 drop-shadow-lg md:-mt-6" />
+          <img src={people5} alt="Company" class="h-auto w-full max-w-[140px] sm:max-w-[150px] md:max-w-40 -mt-4 drop-shadow-lg md:-mt-6" />
         </div>
       </div>
     </div>
