--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -1,6 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import CiciMandarinTeam from "../components/pages/about-us/CiciMandarinTeam.astro";
+import VissionMission from "../components/pages/about-us/VissionMission.astro";
+import Milestone from "../components/pages/about-us/Milestone.astro";
 ---
 
 <Layout title="About Us">
+    <CiciMandarinTeam/>
+    <VissionMission/>
+    <Milestone/>
 </Layout>
