--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,11 @@ import WhyUs from "../components/pages/landing-pages/WhyUs.astro.tsx";
 import SuccesStories from "../components/pages/landing-pages/SuccesStories.astro.tsx";
 import LearnCulture from "../components/pages/landing-pages/LearnCulture.astro.tsx";
 import HottestNews from "../components/pages/landing-pages/HottestNews.astro.tsx";
+import ModalPopUp from "../components/pages/pop-up/ModalPopUp.tsx";
 ---
 
 <Layout title="Home">
+  <ModalPopUp client:load/>
   <Welcome />
   <OurService />
   <AddItionalProServices />
